crates/tui/src/view/snapshots/tui__view__rail__motion_tests__rail_card_after_ten_seconds_holds_still.snap
---
source: crates/tui/src/view/rail_motion_tests.rs
expression: text(&rail(&app))
---
  w                  $0.00 +
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▌ 1 ! NEEDS INPUT        10s
▌ work
▌ approval: shell
▌ $0.00
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▌ 2 ✓ READY              10s
▌ work
▌
▌ $0.00
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
