crates/tui/src/view/snapshots/tui__view__rail__motion_tests__rail_card_spinner.snap
---
source: crates/tui/src/view/rail_motion_tests.rs
expression: text(&rail(&app))
---
  w                  $0.00 +
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▌ 1 ⠋ WORKING             0s
▌ work
▌
▌ $0.00
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄▄
▌ 2 ✓ READY               0s
▌ work
▌
▌ $0.00
▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀▀
